--- a/ProjectFiles/PharmacyManagement/src/javaapplication/bill.form
+++ b/ProjectFiles/PharmacyManagement/src/javaapplication/bill.form
@@ -129,10 +129,10 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="0">
-                <Column editable="true" title="Medicine Name" type="java.lang.Object"/>
-                <Column editable="true" title="Quantity" type="java.lang.Object"/>
-                <Column editable="true" title="Price" type="java.lang.Object"/>
-                <Column editable="true" title="Amount" type="java.lang.Object"/>
+                <Column editable="false" title="Medicine Name" type="java.lang.Object"/>
+                <Column editable="false" title="Quantity" type="java.lang.Object"/>
+                <Column editable="false" title="Price" type="java.lang.Object"/>
+                <Column editable="false" title="Amount" type="java.lang.Object"/>
               </Table>
             </Property>
           </Properties>
