--- a/ProjectFiles/PharmacyManagement/src/javaapplication/home.form
+++ b/ProjectFiles/PharmacyManagement/src/javaapplication/home.form
@@ -172,6 +172,7 @@
         <Property name="text" type="java.lang.String" value="Enter medicine name"/>
       </Properties>
       <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="txtsearchMouseClicked"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtsearchActionPerformed"/>
       </Events>
     </Component>
